(wip) footer - Amazon books clone

--- a/10. amazon-clone/src/index.html
+++ b/10. amazon-clone/src/index.html
@@ -380,6 +380,7 @@
             </div>
         </main>
         <footer class="flex flex-col text-white">
+            <!-- FOOTER SUPERIOR -->
             <div class="py-4 text-center bg-darkblue-600 hover:bg-darkblue-500 text-sm cursor-pointer">
                 <p>Back to top</p>
             </div>
@@ -478,6 +479,114 @@
                             <a href="#">Customer Service</a>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <!-- MIDDLE FOOTER -->
+            <div class="hidden md:flex justify-center bg-darkblue-700 border-t border-gray-700 p-10">
+                <img src="../src/img/amazon_logo.png" alt="Amazon Logo" class="h-6 w-20 mx-10">
+                <div>
+                    <select name="language" class="bg-transparent border border-gray-300 rounded px-3 py-1 mx-10 text-sm">
+                        <option value="english">English</option>
+                        <option value="french">Français</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="flex flex-col items-center bg-darkblue-950 text-xs pt-8 md:pt-2">
+                <div class="flex flex-wrap">
+                    <div>
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Amazon music</h4>
+                                <p class="text-gray-400">Stream millions of songs</p>
+                            </div>
+                        </a>
+                    </div>
+                    
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Amazon Advertising</h4>
+                            <p class="text-gray-400">Find, attract and engage customers</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Amazon Business</h4>
+                            <p class="text-gray-400">Everything for your business</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Amazon Drive</h4>
+                            <p class="text-gray-400">Cloud storage from Amazon</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Amazon Web Service</h4>
+                            <p class="text-gray-400">Scalable Cloud Computing Services</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Goodreads</h4>
+                            <p class="text-gray-400">Book reviews & recommendations</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">IMDb</h4>
+                            <p class="text-gray-400">Movies, TV & Celebrities</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Amazon Photos</h4>
+                            <p class="text-gray-400">Unlimited Photo Storage Free With Prime</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Shopbop</h4>
+                            <p class="text-gray-400">Designer Fashion Brands</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Warehouse Deals</h4>
+                            <p class="text-gray-400">Open-Box Discounts</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Whole Foods Market</h4>
+                            <p class="text-gray-400">We Believe in Real Food</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Amazon Renewed</h4>
+                            <p class="text-gray-400">Like-new products you can trust</p>
+                        </div>
+                    </a>
+
+                    <a href="#" class="hover:underline">
+                        <div>
+                            <h4 class="text-gray-300">Blink</h4>
+                            <p class="text-gray-400">Smart Security for Every Home</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </footer>  
