footer - amazon books clone

--- a/10. amazon-clone/src/index.html
+++ b/10. amazon-clone/src/index.html
@@ -485,16 +485,17 @@
             <div class="hidden md:flex justify-center bg-darkblue-700 border-t border-gray-700 p-10">
                 <img src="../src/img/amazon_logo.png" alt="Amazon Logo" class="h-6 w-20 mx-10">
                 <div>
-                    <select name="language" class="bg-transparent border border-gray-300 rounded px-3 py-1 mx-10 text-sm">
-                        <option value="english">English</option>
-                        <option value="french">Français</option>
+                    <select name="language" class="bg-transparent border border-gray-400 rounded-sm px-3 py-1 mx-10 text-sm">
+                        <option value="english" class="text-gray-500">English</option>
+                        <option value="french" class="text-gray-500">Français</option>
                     </select>
                 </div>
             </div>
 
-            <div class="flex flex-col items-center bg-darkblue-950 text-xs pt-8 md:pt-2">
-                <div class="flex flex-wrap">
-                    <div>
+            <!-- FOOTER INFERIOR -->
+            <div class="flex flex-col items-center bg-darkblue-950 text-xs py-8 px-28">
+                <div class="flex flex-wrap justify-center">
+                    <div class="w-1/5 mb-4 px-10">
                         <a href="#" class="hover:underline">
                             <div>
                                 <h4 class="text-gray-300">Amazon music</h4>
@@ -503,90 +504,124 @@
                         </a>
                     </div>
                     
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Amazon Advertising</h4>
+                                <p class="text-gray-400">Find, attract and engage customers</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Amazon Advertising</h4>
-                            <p class="text-gray-400">Find, attract and engage customers</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Amazon Business</h4>
+                                <p class="text-gray-400">Everything for your business</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Amazon Business</h4>
-                            <p class="text-gray-400">Everything for your business</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Amazon Drive</h4>
+                                <p class="text-gray-400">Cloud storage from Amazon</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Amazon Drive</h4>
-                            <p class="text-gray-400">Cloud storage from Amazon</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Amazon Web Service</h4>
+                                <p class="text-gray-400">Scalable Cloud Computing Services</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Amazon Web Service</h4>
-                            <p class="text-gray-400">Scalable Cloud Computing Services</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Goodreads</h4>
+                                <p class="text-gray-400">Book reviews & recommendations</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Goodreads</h4>
-                            <p class="text-gray-400">Book reviews & recommendations</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">IMDb</h4>
+                                <p class="text-gray-400">Movies, TV & Celebrities</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">IMDb</h4>
-                            <p class="text-gray-400">Movies, TV & Celebrities</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Amazon Photos</h4>
+                                <p class="text-gray-400">Unlimited Photo Storage Free With Prime</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Amazon Photos</h4>
-                            <p class="text-gray-400">Unlimited Photo Storage Free With Prime</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Shopbop</h4>
+                                <p class="text-gray-400">Designer Fashion Brands</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Shopbop</h4>
-                            <p class="text-gray-400">Designer Fashion Brands</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Warehouse Deals</h4>
+                                <p class="text-gray-400">Open-Box Discounts</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Warehouse Deals</h4>
-                            <p class="text-gray-400">Open-Box Discounts</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Whole Foods Market</h4>
+                                <p class="text-gray-400">We Believe in Real Food</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Whole Foods Market</h4>
-                            <p class="text-gray-400">We Believe in Real Food</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Amazon Renewed</h4>
+                                <p class="text-gray-400">Like-new products you can trust</p>
+                            </div>
+                        </a>
+                    </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Amazon Renewed</h4>
-                            <p class="text-gray-400">Like-new products you can trust</p>
-                        </div>
-                    </a>
+                    <div class="w-1/5 mb-4 px-10">
+                        <a href="#" class="hover:underline">
+                            <div>
+                                <h4 class="text-gray-300">Blink</h4>
+                                <p class="text-gray-400">Smart Security for Every Home</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
 
-                    <a href="#" class="hover:underline">
-                        <div>
-                            <h4 class="text-gray-300">Blink</h4>
-                            <p class="text-gray-400">Smart Security for Every Home</p>
-                        </div>
-                    </a>
+                <div class="mt-3 mb-1">
+                    <ul class="flex text-gray-300">
+                        <li class="mx-2 hover:underline"><a href="#">Conditions of Use</a></li>
+                        <li class="mx-2 hover:underline"><a href="#">Privacy Notice</a></li>
+                        <li class="mx-2 hover:underline"><a href="#">Interested-Based Ads</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <p class="text-gray-300 tracking-wide m">&#169; 1996-2023, Amazon.com, Inc. or its affiliates</p>
                 </div>
             </div>
         </footer>  
